--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
 
         </com.lzp.vpindicator.ViewpagerIndicator>
 
+        <com.lzp.vpindicator.ViewpagerIndicator
+            android:id="@+id/indicator2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+        </com.lzp.vpindicator.ViewpagerIndicator>
+
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_1"
