--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,7 @@
         <com.lzp.vpindicator.IndicatorLayout
             android:id="@+id/indicator"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
-
-        </com.lzp.vpindicator.IndicatorLayout>
+            android:layout_height="50dp"/>
 
         <com.lzp.vpindicator.IndicatorLayout
             android:id="@+id/indicator2"
